Fix restriction logic and add status, placeholders, and tests